Artile grid last row alignment fixed

--- a/src/components/ArticleGrid/ArticleGrid.css
+++ b/src/components/ArticleGrid/ArticleGrid.css
@@ -1,3 +1,17 @@
 .top-buffer:not(:first-child) { 
     margin-top:3rem !important; 
 }
+
+.article-grid-container{
+    justify-content: center;
+    /* align-items: center; */
+}
+
+
+@media screen and (min-width : 1200px) {
+    
+    .article-grid-container .row:last-child{
+        justify-content: flex-start !important;
+      
+    }
+}
